--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
 }
